# apps/api/src/modules/danh-muc-san-pham/dto/doi-trang-thai-danh-muc-san-pham.dto.ts
@@ -1,0 +1,13 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsEnum } from 'class-validator';
+
+import { TrangThaiBanGhi } from '../../../generated/prisma/client';
+
+export class DoiTrangThaiDanhMucSanPhamDto {
+  @ApiProperty({
+    enum: TrangThaiBanGhi,
+    enumName: 'TrangThaiBanGhi',
+  })
+  @IsEnum(TrangThaiBanGhi)
+  trangThai!: TrangThaiBanGhi;
+}
